src/objects/Inter_Charge_Money_Transfer_Header__c.object
<CustomObject>
    <fields>
        <fullName>Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Inter Charge Money Transfer Headers</relationshipLabel>
        <relationshipName>Inter_Charge_Money_Transfer_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Inter Charge Money Transfer Headers</relationshipLabel>
        <relationshipName>Inter_Charge_Money_Transfer_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Project_Unit__c.Project__c</valueField>
            </filterItems>
            <filterItems>
                <field>Project_Unit__c.Unit_Status__c</field>
                <operation>equals</operation>
                <value>Booked</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>Inter Charge Money Transfer Headers</relationshipLabel>
        <relationshipName>Inter_Charge_Money_Transfer_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Inter Charge Money Transfer Headers</relationshipLabel>
        <relationshipName>Inter_Charge_Money_Transfer_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receipts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project_Unit__c</field>
                <operation>equals</operation>
                <valueField>Receipt__c.Project_Unit__r.Id</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>Receipt__c.Opportunity__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Receipt__c</referenceTo>
        <relationshipLabel>Inter Charge Money Transfer Headers</relationshipLabel>
        <relationshipName>Inter_Charge_Money_Transfer_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unprocessed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TDS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TDS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transfer_on_Date__c</fullName>
        <label>Transfer on Date</label>
        <type>Date</type>
    </fields>
    <label>Inter Charge Money Transfer Header</label>
    <nameField>
        <label>Inter Charge Money Transfer Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inter Charge Money Transfer Headers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>